--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le goat</title>
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <h1>coucou</h1>
-    <img src="/pngfind.com-goat-simulator-logo-png-3873503.png" alt="goat">
+    <img src="/images/pngfind.com-goat-simulator-logo-png-3873503.png" alt="goat">
+    <!--<img src="https://media1.giphy.com/media/mWnGWYWchrdYc/giphy.gif?cid=ecf05e47a4qtse12ul7elgc37eqruh4dwbqhb8tjym3u2id1&rid=giphy.gif&ct=g" alt="">-->
 </body>
 
 </html>
