ajout background + goat

--- a/index.html
+++ b/index.html
@@ -8,12 +8,34 @@
     <title>Le goat</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/background.css">
 </head>
 
 <body>
-    <h1>coucou</h1>
-    <img src="/images/pngfind.com-goat-simulator-logo-png-3873503.png" alt="goat">
-    <!--<img src="https://media1.giphy.com/media/mWnGWYWchrdYc/giphy.gif?cid=ecf05e47a4qtse12ul7elgc37eqruh4dwbqhb8tjym3u2id1&rid=giphy.gif&ct=g" alt="">-->
+    <div class="background">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <div class="main-goat">
+            <p>coucou</p>
+        </div>
+        <div class="the-goat">
+            <img src="/images/pngfind.com-goat-simulator-logo-png-3873503.png" alt="">
+        </div>
+    </div>
 </body>
 
 </html>
