--- a/index.html
+++ b/index.html
@@ -5,35 +5,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Le goat</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/background.css">
+    <title>max secret lab</title>
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/background.css">
 </head>
 
 <body>
     <div class="background">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <div class="main-goat">
-            <p>coucou</p>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <span class="boulette"></span>
+        <div class="main">
+            <p>hello! hello! Moi c'est maxime</p>
+            <p>EN reconversion chez <a href="https://oclock.io/">O'Clock</a></p>
+
+            <p>Bienvenue dans mon petit <span class="strike">bordel</span> labo, c'est ici que je m'amuse à appliquer ce
+                que j'apprends jour après jour</p>
+
+            <p>Pour l'instant c'est html & css only, le js c'est pour bientôt :wink:</p>
+            <p>en construction</p>
+
         </div>
-        <div class="the-goat">
-            <img src="/images/pngfind.com-goat-simulator-logo-png-3873503.png" alt="">
+        <div class="oclockonaut">
+            <img src="/images/maxonaut.png" alt="">
         </div>
     </div>
 </body>
