ajout header, cartes, js hover carte

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>max secret lab</title>
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/background.css">
+    <link rel="stylesheet" href="/frontpage/css/reset.css">
+    <link rel="stylesheet" href="/frontpage/css/styles.css">
+    <!--<link rel="stylesheet" href="/frontpage/css/background.css">-->
+    <link rel="stylesheet" href="/frontpage/css/keyframes.css">
 </head>
 
 <body>
@@ -41,20 +42,128 @@
         <span class="boulette"></span>
         <span class="boulette"></span>
         <div class="main">
-            <p>hello! hello! Moi c'est maxime</p>
-            <p>EN reconversion chez <a href="https://oclock.io/">O'Clock</a></p>
-
-            <p>Bienvenue dans mon petit <span class="strike">bordel</span> labo, c'est ici que je m'amuse à appliquer ce
-                que j'apprends jour après jour</p>
-
-            <p>Pour l'instant c'est html & css only, le js c'est pour bientôt :wink:</p>
-            <p>en construction</p>
-
+            <header class="header-container">
+                <div>
+                    <h1>hello! hello!</h1>
+                    <p>Moi c'est maxime et je suis actuellement en reconversion chez <a target="_blank"
+                            class="superecole" href="https://oclock.io/">O'Clock</a></p>
+                    <p>Bienvenue dans mon petit <span class="strike">bordel</span> labo, c'est ici que je m'amuse à
+                        appliquer tout ce que j'apprends jour après jour</p>
+                    <p>Pour l'instant c'est html et css only, le js c'est pour bientôt :wink:</p>
+                    <p class="travaux">en construction</p>
+                </div>
+            </header>
+            <article class="projets-container">
+                <div data-tilt data-tilt-scale="1.1" class="projet-container__carte">
+                    <h3>Mon premier projet !</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi enim delectus, architecto suscipit
+                        minima omnis nobis nam laborum earum quos, odio qui. Harum ex illum exercitationem, debitis,
+                        quidem minima eos nihil fuga eum quia praesentium deleniti vel. Suscipit, quibusdam quidem!</p>
+                    <a href="#">voir mon projet</a>
+                </div>
+                <div data-tilt data-tilt-scale="1.1" class="projet-container__carte">
+                    <h3>oups, rai recommencé</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis voluptate aut molestias
+                        quibusdam, recusandae laborum.</p>
+                    <a href="#">voir mon projet</a>
+                </div>
+                <div data-tilt data-tilt-scale="1.1" class="projet-container__carte">
+                    <h3>Une idée ?</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa quidem commodi delectus voluptates
+                        reprehenderit possimus ab quisquam, sunt accusamus dolor pariatur quasi itaque numquam corporis
+                        molestiae eligendi deserunt, porro omnis id expedita doloribus quod ex.</p>
+                    <a href="#">voir mon projet</a>
+                </div>
+                <div data-tilt data-tilt-scale="1.1" class="projet-container__carte">
+                    <h3>youpi, j'ai touvé mon deuxième projet !</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex nam, maxime nisi consectetur
+                        repellendus labore ut ad, facilis explicabo impedit ea perferendis aliquam dolorum aspernatur
+                        provident eveniet portibus officiis sapiente recusandae velit
+                        eos assumenda, sunt eum
+                        obcaecati quaerat reprehenderit delectus aliquid deserunt a quidem dolor aliquam beatae nostrum
+                        pariatur!</p>
+                    <a href="#">voir mon projet</a>
+                </div>
+                <div data-tilt data-tilt-scale="1.1" class="projet-container__carte">
+                    <h3>maintenant, j'ai plus d'idées :/</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Animi id blanditiis, ex molestiae
+                        pariatur soluta dignissimos perferendis! Commodi id unde quisquam laborum voluptates
+                        accusamus
+                        modi, aliquid labore voluptas pariatur tempora?</p>
+                    <a href="#">voir mon projet</a>
+                </div>
+                <div data-tilt data-tilt-scale="1.1" class="projet-container__carte">
+                    <h3>C'est une boîte</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis voluptate aut molestias
+                        quibusdam, recusandae laborum.</p>
+                    <a href="#">voir mon projet</a>
+                </div>
+                <div data-tilt data-tilt-scale="1.1" class="projet-container__carte">
+                    <h3>toujours pas de troisème projet ??</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex nam, maxime nisi consectetur
+                        repellendus labore ut ad, facilis explicabo impedit ea perferendis aliquam dolorum aspernatur
+                        provident eveniet porro sit sint reiciendis, arte recusandae velit eos assumenda, sunt eum
+                        obcaecati quaerat reprehenderit delectus aliquid deserunt a quidem dolor aliquam beatae nostrum
+                        pariatur!</p>
+                    <a href="#">voir mon projet</a>
+                </div>
+                <div data-tilt data-tilt-scale="1.1" class="projet-container__carte">
+                    <h3>hello world</h3>
+                    <p>Pouet.</p>
+                    <a href="#">voir mon projet</a>
+                </div>
+                <div data-tilt data-tilt-scale="1.1" class="projet-container__carte">
+                    <h3>vive les chats</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex nam, maxime nisi consectetur
+                        repellendus labore ut ad, facilis explicabo impedit ea perferendis aliquam dolorum aspernatur
+                        provident eveniet porro sit sint reiciendis, arte recusandae velit eos assumenda, sunt eum
+                        obcaecati quaerat reprehenderit delectus aliquid deserunt a quidem dolor aliquam beatae nostrum
+                        pariatur!</p>
+                    <a href="#">voir mon projet</a>
+                </div>
+                <div data-tilt data-tilt-scale="1.1" class="projet-container__carte">
+                    <h3>encore une boîte</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex nam, maxime nisi consectetur
+                        repellendus labore ut ad, facilis explicabo impedit ea perferendis aliquam dolorum aspernatur
+                        provident eveniet porro sit sint reiciendis, arte recusandae velit eos assumenda, sunt eum
+                        obcaecati quaerat reprehenderit delectus aliquid deserunt a quidem dolor aliquam beatae nostrum
+                        pariatur!</p>
+                    <a href="#">voir mon projet</a>
+                </div>
+                <div data-tilt data-tilt-scale="1.1" class="projet-container__carte">
+                    <h3>toujours une boîte</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis voluptate aut molestias
+                        quibusdam, recusandae laborum.</p>
+                    <a href="#">voir mon projet</a>
+                </div>
+            </article>
+            <!--<footer class="footer-container">
+                <section class="footer-container-cv">
+                    <a href="#">mon cv</a>
+                </section>
+                <div class="footer-container-link">
+                    <a href="#"><img src="/frontpage/images/footer social icones/github.png"
+                            alt="lien vers mon github"></a>
+                    <a href="#"><img src="/frontpage/images/footer social icones/linkedin.png"
+                            alt="lien vers mon twitter"></a>
+                    <a href="#"><img src="/frontpage/images/footer social icones/twitter.png"
+                            alt="lien vers mon twitter"></a>
+                </div>
+            </footer>-->
         </div>
-        <div class="oclockonaut">
-            <img src="/images/maxonaut.png" alt="">
+        <div class="oclocknaut">
+            <img src="/frontpage/images/ockocknaut.png" alt="astronaut">
         </div>
     </div>
+    <!--  petit script js hover  -->
+    <script type="text/javascript" src="/frontpage/js/vanilla-tilt.js"></script>
+    <script>
+        VanillaTilt.init(document.querySelectorAll(".projet-container__carte"), {
+            max: 25,
+            speed: 100
+        });
+    </script>
 </body>
 
 </html>
