--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div id="main">
         <section class="home-section">
             <div class="home-text">
-                <p class="text">Hello! Hello! Je suis</p>
+                <p class="text">Hello! Hello! I'm</p>
                 <h1>Maxime Cros</h1>
-                <h2>Developpeur Web FrontEnd</h2>
-                <h3>Actuellement en formation chez O'Clock</h3>
+                <h2>FullStack Web Developer</h2>
+                <h3>Currently in training at O'Clock school</h3>
                 <div class="buttons">
                     <a data-tilt data-tilt-scale="1.2" href="#" class="btn1">A propos de moi</a>
                     <a data-tilt data-tilt-scale="1.2" href="#" class="btn2">Portfolio</a>
