ajout page d'acceuil V1 modif tout le texte  en anglais

--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
                 <h2>FullStack Web Developer</h2>
                 <h3>Currently in training at O'Clock school</h3>
                 <div class="buttons">
-                    <a data-tilt data-tilt-scale="1.2" href="#" class="btn1">A propos de moi</a>
+                    <a data-tilt data-tilt-scale="1.2" href="#" class="btn1">About me</a>
                     <a data-tilt data-tilt-scale="1.2" href="#" class="btn2">Portfolio</a>
-                    <!-- <p data-tilt data-tilt-scale="1.1" class="About-me">A propos de moi</p>
-                    <p data-tilt data-tilt-scale="1.1" class="Portfolio">Portfolio</p> -->
                 </div>
             </div>
             <div class="home-img">
