--- a/index.html
+++ b/index.html
@@ -13,31 +13,99 @@
 
 
 <body>
-    <div id="main">
-        <section class="home-section">
-            <div class="home-text">
-                <p class="text">Hello! Hello! I'm</p>
-                <h1>Maxime Cros</h1>
-                <h2>FullStack Web Developer</h2>
-                <h3>Currently in training at O'Clock school</h3>
-                <div class="buttons">
-                    <a data-tilt data-tilt-scale="1.2" href="#" class="btn1">About me</a>
-                    <a data-tilt data-tilt-scale="1.2" href="#" class="btn2">Portfolio</a>
+    <div class="container">
+        <img class="superpose" src="/images/parallax/background full.png" alt="">
+        <img id="arriere-plan" class="superpose" src="/images/parallax/arriere-plan.png" alt="">
+        <img id="deuxieme-plan" class="superpose" src="/images/parallax/deuxieme-plan.png" alt="">
+        <img id="premier-plan" class="superpose" src="/images/parallax/premier-plan.png" alt="">
+        <img id="gros-nuage" class="superpose" src="/images/parallax/gros-nuage.png" alt="">
+        <img id="moyen-nuage" class="superpose" src="/images/parallax/deuxieme-nuage.png" alt="">
+        <img id="piti-nuage" class="superpose" src="/images/parallax/troiseme-nuage.png" alt="">
+        <main id="main">
+
+            <div class="left-section">
+                <div class="name-container">
+                    <h1 class="name-container-firstname">CROS MAXIME</h1>
+                    <h2 class="name-container-lastname">... Web Developer</h2>
+                </div>
+                <img src="#" alt="">
+                <footer class="left-section-description">
+                    <div class="left-section-description-left-container">
+                        <div>
+                            <h3> <a href="#" target="_blank">Recherche Alternance</a></h3>
+                            <p>Disponible à partir de septembre</p>
+                            <p>React / SASS / Redux /Node.js</p>
+                        </div>
+                    </div>
+                    <div class="left-section-description-right-container">
+                        <p>Actuellement en reconversion professionnelle chez O'clock</p>
+                        <p>Pormo Cassini - Fevrier 2022 Aout 2022</p>
+                    </div>
+                </footer>
+            </div>
+
+            <div class="right-section">
+                <nav class="navbar">
+                    <a class="navbar-link" href="#">
+                        <p class="navbar-link-text">Acceuil</p>
+                    </a>
+                    <a class="navbar-link" href="#">
+                        <p class="navbar-link-text">Portfolio</p>
+                    </a>
+                    <a class="navbar-link" href="#">
+                        <p class="navbar-link-text">A propos de moi</p>
+                    </a>
+                    <a class="navbar-link" href="#">
+                        <p class="navbar-link-text">CV</p>
+                    </a>
+                    <a class="navbar-link" href="#">
+                        <p class="navbar-link-text">Contact</p>
+                    </a>
+                </nav>
+                <article>
+                    <p>UNDER CONSTRUCTION</p>
+                    <!-- <div data-tilt data-tilt-scale="0.95" class="card">
+                        <a href="#"><img src="/images/Tokyo-tower.jpg" alt="Tokyo Tower"></a>
+                    </div>
+                    <div data-tilt data-tilt-scale="0.95" class="card">
+                        <a href="#"><img src="/images/Forest-of-Lamps-TeamLab-Borderless-Mori-Digital-Art-Museum.jpg"
+                                alt="teamLab Borderless"></a>
+                    </div>
+                    <div data-tilt data-tilt-scale="0.95" class="card">
+                        <a href="#"><img
+                                src="/images/The-night-exhibition-transformation-of-Gundam-Statue-from-Unicorn-Mode-to-Destroy-mode.-Odaiba-Tokyo-Japan.jpg"
+                                alt="Gundam Odaiba"></a>
+                    </div> -->
+                </article>
+                <div class="link">
+                    <img src="/images/githublogo.png" alt="Github-logo" class="link-logo">
+                    <img src="/images/linkedinlogo.png" alt="Linkedin-logo" class="link-logo">
+                    <img src="/images/slacklogo.png" alt="Slack-logo" class="link-logo">
                 </div>
             </div>
-            <div class="home-img">
-                <img src="/images/vn.gif" alt="">
-            </div>
-        </section>
+
+        </main>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <!--  petit script js hover  -->
     <script type="text/javascript" src="/js/vanilla-tilt.js"></script>
     <script>
-        VanillaTilt.init(document.querySelectorAll(".projet-container__carte"), {
-            max: 25,
-            speed: 100
+        VanillaTilt.init(document.querySelectorAll(".card"), {
+            max: 10,
+            speed: 400
         });
     </script>
 </body>
