ajout animation entrée title et subtitle

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="left-section-description-left-container">
                         <div>
                             <h3> <a href="#" target="_blank">Recherche Alternance</a></h3>
-                            <p>Disponible à partir de septembre</p>
+                            <p>À partir de septembre</p>
                             <p>React / SASS / Redux /Node.js</p>
                         </div>
                     </div>
