ajout debut responsive

--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/keyframes.css">
 </head>
-
-
 <body>
     <div class="container">
-        <img class="superpose" src="/images/parallax/background full.png" alt="">
+        <img id="background" class="superpose" src="/images/parallax/background full.png" alt="">
         <img id="arriere-plan" class="superpose" src="/images/parallax/arriere-plan.png" alt="">
         <img id="deuxieme-plan" class="superpose" src="/images/parallax/deuxieme-plan.png" alt="">
         <img id="premier-plan" class="superpose" src="/images/parallax/premier-plan.png" alt="">
@@ -23,28 +21,11 @@
         <img id="piti-nuage" class="superpose" src="/images/parallax/troiseme-nuage.png" alt="">
         <main id="main">
 
-            <div class="left-section">
+            <header class="header">
                 <div class="name-container">
                     <h1 class="name-container-firstname">CROS MAXIME</h1>
                     <h2 class="name-container-lastname">... Web Developer</h2>
                 </div>
-                <img src="#" alt="">
-                <footer class="left-section-description">
-                    <div class="left-section-description-left-container">
-                        <div>
-                            <h3> <a href="#" target="_blank">Recherche Alternance</a></h3>
-                            <p>À partir de septembre</p>
-                            <p>React / SASS / Redux /Node.js</p>
-                        </div>
-                    </div>
-                    <div class="left-section-description-right-container">
-                        <p>Actuellement en reconversion professionnelle chez O'clock</p>
-                        <p>Pormo Cassini - Fevrier 2022 Aout 2022</p>
-                    </div>
-                </footer>
-            </div>
-
-            <div class="right-section">
                 <nav class="navbar">
                     <a class="navbar-link" href="#">
                         <p class="navbar-link-text">Acceuil</p>
@@ -53,52 +34,41 @@
                         <p class="navbar-link-text">Portfolio</p>
                     </a>
                     <a class="navbar-link" href="#">
-                        <p class="navbar-link-text">A propos de moi</p>
+                        <p class="navbar-link-text">CV</p>
                     </a>
                     <a class="navbar-link" href="#">
-                        <p class="navbar-link-text">CV</p>
+                        <p class="navbar-link-text">A propos de moi</p>
                     </a>
                     <a class="navbar-link" href="#">
                         <p class="navbar-link-text">Contact</p>
                     </a>
                 </nav>
-                <article>
-                    <p>UNDER CONSTRUCTION</p>
-                    <!-- <div data-tilt data-tilt-scale="0.95" class="card">
-                        <a href="#"><img src="/images/Tokyo-tower.jpg" alt="Tokyo Tower"></a>
+            </header>
+            <article>
+                <p>UNDER CONSTRUCTION</p>
+            </article>
+            <footer class="footer">
+                <div class="footer-first-section">
+                    <h3> <a href="#" target="_blank">Recherche Alternance</a></h3>
+                    <div>
+                        <p>À partir de septembre</p>
+                        <p>React / SASS / Redux /Node.js</p>
                     </div>
-                    <div data-tilt data-tilt-scale="0.95" class="card">
-                        <a href="#"><img src="/images/Forest-of-Lamps-TeamLab-Borderless-Mori-Digital-Art-Museum.jpg"
-                                alt="teamLab Borderless"></a>
-                    </div>
-                    <div data-tilt data-tilt-scale="0.95" class="card">
-                        <a href="#"><img
-                                src="/images/The-night-exhibition-transformation-of-Gundam-Statue-from-Unicorn-Mode-to-Destroy-mode.-Odaiba-Tokyo-Japan.jpg"
-                                alt="Gundam Odaiba"></a>
-                    </div> -->
-                </article>
-                <div class="link">
+                </div>
+                <div class="footer-second-section">
+                    <p>Actuellement en reconversion professionnelle chez O'clock</p>
+                    <p>Promo Cassini / Fevrier 2022 - Aout 2022</p>
+                </div>
+            </footer>
+
+            <!-- <div class="link">
                     <img src="/images/githublogo.png" alt="Github-logo" class="link-logo">
                     <img src="/images/linkedinlogo.png" alt="Linkedin-logo" class="link-logo">
                     <img src="/images/slacklogo.png" alt="Slack-logo" class="link-logo">
-                </div>
-            </div>
+                </div> -->
 
         </main>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <!--  petit script js hover  -->
     <script type="text/javascript" src="/js/vanilla-tilt.js"></script>
